# assignments

agrichain/: .dockerignore  .gitignore  Dockerfile  README.md  main.py  pyproject.toml  test_cart.py
jasper-colin/: README.md
jasper-colin/backend/: .env.example  .eslintrc.json  db-compose.yml  package-lock.json  package.json
jasper-colin/backend/src/: cluster.ts  index.ts  utils.ts
jasper-colin/backend/src/controllers/: auth.controller.ts  productController.ts
jasper-colin/fastapi-backend/: .env.template  auth_utils.py  config.py  main.py  models.py  pyproject.toml  requirements.txt
jasper-colin/fastapi-backend/routers/: auth.py  products.py
jasper-colin/frontend/: package-lock.json  package.json  tailwind.config.ts
jasper-colin/frontend/src/: middleware.ts
jktech/: .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  requirements.txt  run.py
jktech/.github/workflows/: ci-cd.yml
jktech/alembic/: env.py
jktech/app/: main.py
jktech/app/api/: auth.py  deps.py  documents.py  qa.py  users.py
jktech/app/core/: config.py  security.py
jktech/app/db/: base.py
jktech/app/models/: __init__.py  document.py  qa_session.py  user.py
jktech/app/schemas/: __init__.py  document.py  qa.py  user.py
jktech/app/services/: document_service.py  embedding_service.py  qa_session_service.py  rag_service.py  user_service.py
jktech/scripts/: generate_test_data.py  init_db.py
jktech/tests/: conftest.py
jktech/tests/api/: test_auth.py
jktech/tests/services/: test_embedding_service.py
(+16 files in other folders)
